# debt-approval-test-task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/backend/: settings.py  urls.py
backend/debt_approval_api/: admin.py  apps.py  models.py  urls.py  views.py
backend/debt_approval_api/management/commands/: seed_db.py
backend/debt_approval_api/migrations/: 0001_initial.py
tests/: test_debt_approval_api.py
