[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Test task"
authors = ["Dana Klimava <danonklimova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
